force-app/main/default/objects/Project__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <formula>EndDate__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysLeft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>