force-app/main/default/objects/Project__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>